--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,10 @@
     "web3": "^1.3.5"
   },
   "scripts": {
-    "start": "npm run test",
-    "dev": "lite-server",
-    "test": "lite-server"
-   // "start": "react-scripts start",
-    //"build": "react-scripts build",
-    //"test": "react-scripts test",
-    //"eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
